--- a/QuadCopterFirmware.vcxproj.filters
+++ b/QuadCopterFirmware.vcxproj.filters
@@ -85,6 +85,9 @@
       <Filter>Source Files\Flight Control</Filter>
     </ClInclude>
     <ClInclude Include="tests.h" />
+    <ClInclude Include="FlightController.h">
+      <Filter>Source Files\Flight Control</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Accelerometer.cpp">
@@ -121,5 +124,8 @@
       <Filter>Source Files\Flight Control</Filter>
     </ClCompile>
     <ClCompile Include="tests.cpp" />
+    <ClCompile Include="FlightController.cpp">
+      <Filter>Source Files\Flight Control</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
